fix: 가입 완료 후 로그인 페이지 경로 수정 (login.html -> employee-login.html)

--- a/employee-register.html
+++ b/employee-register.html
@@ -463,7 +463,7 @@
         
         // 3초 후 로그인 페이지로 이동
         setTimeout(() => {
-          window.location.href = 'login.html';
+          window.location.href = 'employee-login.html';
         }, 3000);
         
       } catch (error) {
