--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -2038,6 +2038,7 @@
         document.getElementById('companyBusinessNumber').value = '';
         document.getElementById('companyPhone').value = '';
         document.getElementById('companyAddress').value = '';
+        updatePreview(); // 미리보기 업데이트
         return;
       }
       
@@ -2047,6 +2048,7 @@
         document.getElementById('companyBusinessNumber').value = company.businessNumber || '';
         document.getElementById('companyPhone').value = company.phone || '';
         document.getElementById('companyAddress').value = company.address || '';
+        updatePreview(); // 미리보기 업데이트
       }
     }
 
@@ -2940,7 +2942,7 @@
             <div class="form-row">
               <div class="form-group">
                 <label for="companySelect">회사 선택 *</label>
-                <select id="companySelect" required onchange="loadCompanyInfo()">
+                <select id="companySelect" required onchange="loadCompanyInfo(); updatePreview();">
                   <option value="">선택하세요</option>
                 </select>
               </div>
