--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -1530,6 +1530,7 @@
           document.getElementById('companyBusinessNumber').value = company.businessNumber;
           document.getElementById('companyPhone').value = company.phone;
           document.getElementById('companyAddress').value = company.address;
+          console.log('✅ 회사 정보 자동 입력 완료:', company.name);
         }
         
         console.log('✅ 회사 목록 로드 완료');
@@ -1982,6 +1983,7 @@
           }
           
           console.log('✅ 직원 정보 로드 완료:', employee.name);
+          updatePreview(); // 미리보기 업데이트
         } else {
           console.error('❌ 직원 정보를 찾을 수 없음');
           alert('직원 정보를 찾을 수 없습니다.');
@@ -2910,7 +2912,7 @@
             <div class="form-row">
               <div class="form-group">
                 <label for="employeeSelect">직원 선택 *</label>
-                <select id="employeeSelect" required onchange="loadEmployeeInfo()">
+                <select id="employeeSelect" required onchange="loadEmployeeInfo(); updatePreview();">
                   <option value="">선택하세요</option>
                 </select>
               </div>
