--- a/employee-register.html
+++ b/employee-register.html
@@ -446,6 +446,7 @@
           store: store,
           position: position,
           userType: 'employee',
+          role: 'employee',  // Firestore 보안 규칙용
           status: 'active',
           createdAt: firebase.firestore.FieldValue.serverTimestamp(),
           updatedAt: firebase.firestore.FieldValue.serverTimestamp()
