더미 데이터 제거: employee.html 하드코딩 텍스트 삭제
- displayName: 홍길동님 → 로딩 중...
- displayStore: 부천시청점 → 로딩 중...
- JS에서 실제 데이터로 업데이트됨

--- a/employee.html
+++ b/employee.html
@@ -223,8 +223,8 @@
     <div class="top-bar">
       <div class="user-info">
         <div>
-          <div class="user-name" id="displayName">홍길동님</div>
-          <div class="user-store" id="displayStore">부천시청점</div>
+          <div class="user-name" id="displayName">로딩 중...</div>
+          <div class="user-store" id="displayStore">로딩 중...</div>
         </div>
       </div>
       <button class="btn btn-secondary" onclick="handleLogout()">로그아웃</button>
