--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -2311,7 +2311,39 @@
       // 회사 목록
       const storeSelect = document.getElementById('storeSelect');
       if (storeSelect) {
-        const stores = JSON.parse(localStorage.getItem('stores') || '[]');
+        let stores = JSON.parse(localStorage.getItem('stores') || '[]');
+        
+        // stores가 비어있으면 기본 매장 추가
+        if (stores.length === 0) {
+          stores = [
+            {
+              id: '1',
+              name: '맛남살롱 부천시청점',
+              ceo: '홍길동',
+              businessNumber: '123-45-67890',
+              phone: '032-123-4567',
+              address: '경기도 부천시'
+            },
+            {
+              id: '2',
+              name: '맛남살롱 상동점',
+              ceo: '홍길동',
+              businessNumber: '123-45-67890',
+              phone: '032-123-4568',
+              address: '경기도 부천시 상동'
+            },
+            {
+              id: '3',
+              name: '맛남살롱 부천역사점',
+              ceo: '홍길동',
+              businessNumber: '123-45-67890',
+              phone: '032-123-4569',
+              address: '경기도 부천시 부천역'
+            }
+          ];
+          localStorage.setItem('stores', JSON.stringify(stores));
+          console.log('✅ 기본 매장 정보 생성 완료');
+        }
         
         storeSelect.innerHTML = '<option value="">선택하세요</option>';
         stores.forEach(store => {
