계약서: saveContract 수정 (companySelect→storeSelect, 회사정보 저장 필드 추가)

--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -3604,7 +3604,12 @@
         employeeBirth: document.getElementById('employeeBirth').value,
         employeeAddress: document.getElementById('employeeAddress').value,
         employeePhone: document.getElementById('employeePhone').value,
-        companyId: document.getElementById('companySelect').value,
+        storeId: document.getElementById('storeSelect').value,
+        companyName: document.getElementById('workStore').value,
+        companyCEO: document.getElementById('companyCEO').value,
+        companyBusinessNumber: document.getElementById('companyBusinessNumber').value,
+        companyPhone: document.getElementById('companyPhone').value,
+        companyAddress: document.getElementById('companyAddress').value,
         contractType: document.getElementById('contractType').value,
         workStore: document.getElementById('workStore').value,
         startDate: document.getElementById('startDate').value,
