--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -525,7 +525,7 @@
         </div>
         <div class="form-group">
           <label for="noticeContent">내용 *</label>
-          <textarea id="noticeContent" placeholder="공지사항 내용을 입력하세요" required style="min-height: 300px; resize: vertical;"></textarea>
+          <textarea id="noticeContent" placeholder="공지사항 내용을 입력하세요" required style="width: 100%; min-height: 300px; resize: vertical; box-sizing: border-box;"></textarea>
         </div>
         <div class="form-group">
           <label style="display: flex; align-items: center; cursor: pointer;">
