Revert: 공지사항 및 UI 변경 롤백 (관리자페이지 오류)

--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -525,7 +525,7 @@
         </div>
         <div class="form-group">
           <label for="noticeContent">내용 *</label>
-          <textarea id="noticeContent" placeholder="공지사항 내용을 입력하세요" required style="width: 100%; min-height: 300px; resize: vertical; box-sizing: border-box;"></textarea>
+          <textarea id="noticeContent" placeholder="공지사항 내용을 입력하세요" required style="min-height: 300px; resize: vertical;"></textarea>
         </div>
         <div class="form-group">
           <label style="display: flex; align-items: center; cursor: pointer;">
@@ -2042,27 +2042,21 @@
         const dateStr = date.toLocaleDateString('ko-KR');
         const timeStr = date.toLocaleTimeString('ko-KR', { hour: '2-digit', minute: '2-digit' });
         
-          return `
-            <tr>
-              <td>
-                ${notice.important ? '<span style="color: #ff6b6b; font-weight: bold;">⭐</span> ' : ''}
-                ${notice.title}
-              </td>
-              <td>${dateStr} ${timeStr}</td>
-              <td>${notice.important ? '<span style="color: #ff6b6b;">중요</span>' : '-'}</td>
-              <td>
-                <button class="btn btn-sm" onclick="showEditNoticeModal('${notice.id}')">수정</button>
-                <button class="btn btn-sm btn-danger" onclick="deleteNoticeConfirm('${notice.id}')">삭제</button>
-              </td>
-            </tr>
-          `;
-        }).join('');
-        
-        console.log(`✅ ${notices.length}개 공지사항 로드 완료`);
-      } catch (error) {
-        console.error('❌ 공지사항 로드 실패:', error);
-        tbody.innerHTML = '<tr><td colspan="4" style="text-align: center; color: var(--danger-color);">공지사항을 불러오는데 실패했습니다.</td></tr>';
-      }
+        return `
+          <tr>
+            <td>
+              ${notice.important ? '<span style="color: #ff6b6b; font-weight: bold;">⭐</span> ' : ''}
+              ${notice.title}
+            </td>
+            <td>${dateStr} ${timeStr}</td>
+            <td>${notice.important ? '<span style="color: #ff6b6b;">중요</span>' : '-'}</td>
+            <td>
+              <button class="btn btn-sm" onclick="showEditNoticeModal('${notice.id}')">수정</button>
+              <button class="btn btn-sm btn-danger" onclick="deleteNoticeConfirm('${notice.id}')">삭제</button>
+            </td>
+          </tr>
+        `;
+      }).join('');
     }
 
     function showAddNoticeModal() {
