🐛 서명 완료 계약서 표시 버그 수정
- contract-sign.html: signatureSection ID 추가
- contract-sign.js: 디버깅 로그 추가 및 버전 표시
- 서명 완료된 계약서 조회 시 읽기 전용 모드 정상 작동
- 캐시 무효화를 위한 버전 쿼리 파라미터 추가 (?v=2)

--- a/contract-sign.html
+++ b/contract-sign.html
@@ -287,7 +287,7 @@
       </div>
 
       <!-- 서명 섹션 -->
-      <div class="sign-section">
+      <div id="signatureSection" class="sign-section">
         <h3>✍️ 서명하기</h3>
         
         <div class="sign-info">
@@ -324,6 +324,6 @@
   <!-- Firebase Config -->
   <script src="js/firebase-config.js"></script>
   
-  <script src="js/contract-sign.js"></script>
+  <script src="js/contract-sign.js?v=2"></script>
 </body>
 </html>
