--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -1379,7 +1379,7 @@
               </tr>
               <tr>
                 <th style="border: 1px solid #333; padding: 12px; background: #f5f5f5; font-weight: 600; text-align: left;">근무 장소</th>
-                <td style="border: 1px solid #333; padding: 12px;">맛남살롱 ${contract.workStore}</td>
+                <td style="border: 1px solid #333; padding: 12px;">${contract.workStore}</td>
               </tr>
               <tr>
                 <th style="border: 1px solid #333; padding: 12px; background: #f5f5f5; font-weight: 600; text-align: left;">업무 내용</th>
@@ -1536,7 +1536,7 @@
       await new Promise(resolve => setTimeout(resolve, 500));
       
       const opt = {
-        margin: 0,
+        margin: 20, // 상하좌우 2cm (20mm)
         filename: fileName,
         image: { 
           type: 'jpeg', 
