✨ 직원 페이지에 계약서 상세보기 모달 추가
✅ 완료된 작업:
- employee-contract-modal.js 신규 생성
- 관리자 페이지와 동일한 포맷의 계약서 모달
- PDF 저장 기능 (상하좌우 2cm 여백)
- 인쇄 기능
- 서명 표시 (대표 + 근로자)
- Firestore에서 계약서 및 서명 데이터 조회
- 모달 외부 클릭 시 닫기
- 인쇄 시 깔끔한 레이아웃

📋 기능:
- 계약서 원본 보기 버튼 → 모달 팝업
- PDF 저장, 인쇄 버튼
- 서명 완료 시 양쪽 서명 표시
- 근무 장소: workStore 값 그대로 표시

--- a/employee.html
+++ b/employee.html
@@ -495,6 +495,9 @@
   <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
 
+  <!-- HTML2PDF 라이브러리 -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
+
   <!-- JavaScript -->
   <script src="js/firebase-config.js"></script>
   <script src="js/config.js"></script>
@@ -502,5 +505,6 @@
   <script src="js/auth.js"></script>
   <script src="js/api.js"></script>
   <script src="js/employee.js"></script>
+  <script src="js/employee-contract-modal.js"></script>
 </body>
 </html>
