✨ 직원 페이지 개선 및 버그 수정
🐛 수정 사항:
1. 급여 조회 상세내역 분단위 표시
   - formatHoursAndMinutes() 함수 추가
   - 총 근무시간 '8시간 30분' 형식으로 표시

2. 서명 완료 페이지에 대시보드 돌아가기 버튼 추가
   - employee.html로 바로 돌아갈 수 있도록 개선

✅ 테스트 완료:
- 관리자 페이지 정상 작동 확인
- Python HTTP 서버로 로컬 테스트 완료

--- a/contract-sign.html
+++ b/contract-sign.html
@@ -210,6 +210,11 @@
         <p style="margin-top: var(--spacing-md); font-size: 14px; color: var(--text-secondary);">
           계약서 ID: <strong id="successContractId"></strong>
         </p>
+        <div style="margin-top: var(--spacing-xl);">
+          <button class="btn btn-primary" onclick="location.href='employee.html'" style="padding: 12px 32px; font-size: 16px;">
+            🏠 대시보드로 돌아가기
+          </button>
+        </div>
       </div>
     </div>
 
